force-app/main/default/objects/Credible_Lookup__c/Credible_Lookup__c.object-meta.xml
<CustomObject>
    <label>Credible Lookup</label>
    <nameField>
        <label>Credible Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credible Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>