force-app/main/default/objects/Credible_Lookup__c/fields/Credible_Lookup_Category__c.field-meta.xml
<CustomField>
    <fullName>Credible_Lookup_Category__c</fullName>
    <label>Credible Lookup Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peer Type</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Living Situation</fullName>
            </value>
            <value>
                <fullName>Preferred Contact Method</fullName>
            </value>
            <value>
                <fullName>Race OMB</fullName>
            </value>
            <value>
                <fullName>Ethnicity OMB</fullName>
            </value>
            <value>
                <fullName>Preferred Language</fullName>
            </value>
            <value>
                <fullName>Gender</fullName>
            </value>
            <value>
                <fullName>Sexual Orientation</fullName>
            </value>
            <value>
                <fullName>Gender Identity</fullName>
            </value>
            <value>
                <fullName>Assigned Sex at Birth</fullName>
            </value>
            <value>
                <fullName>Preferred Pronouns</fullName>
            </value>
            <value>
                <fullName>Signature Source Code</fullName>
            </value>
            <value>
                <fullName>Release Information Code</fullName>
            </value>
            <value>
                <fullName>Bullying Last Occurrence</fullName>
            </value>
            <value>
                <fullName>Forensic Status</fullName>
            </value>
            <value>
                <fullName>Smoking Status</fullName>
            </value>
            <value>
                <fullName>Referral Source</fullName>
            </value>
            <value>
                <fullName>Providers</fullName>
            </value>
            <value>
                <fullName>Referring Qualifiers</fullName>
            </value>
            <value>
                <fullName>No Admit Reason</fullName>
            </value>
            <value>
                <fullName>Domain Focus Area Scores</fullName>
            </value>
            <value>
                <fullName>Staff Peer Involvement</fullName>
            </value>
            <value>
                <fullName>Employment Status</fullName>
            </value>
            <value>
                <fullName>Regional Director</fullName>
            </value>
            <value>
                <fullName>Marital Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>