force-app/main/default/objects/Credible_Lookup__c/fields/Credible_Lookup_Item__c.field-meta.xml
<CustomField>
    <fullName>Credible_Lookup_Item__c</fullName>
    <label>Credible Lookup Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Peer Type</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Living Situation</fullName>
            </value>
            <value>
                <fullName>Preferred Contact</fullName>
            </value>
            <value>
                <fullName>Race</fullName>
            </value>
            <value>
                <fullName>Ethnicity</fullName>
            </value>
            <value>
                <fullName>Preferred Language</fullName>
            </value>
            <value>
                <fullName>Gender</fullName>
            </value>
            <value>
                <fullName>Sexual_Orientation</fullName>
            </value>
            <value>
                <fullName>Gender Identity</fullName>
            </value>
            <value>
                <fullName>Assigned Sex At Birth</fullName>
            </value>
            <value>
                <fullName>Preferred Pronouns</fullName>
            </value>
            <value>
                <fullName>Primary Written Language</fullName>
            </value>
            <value>
                <fullName>Client Signature Source</fullName>
            </value>
            <value>
                <fullName>Release Of Information</fullName>
            </value>
            <value>
                <fullName>If yes How long ago(dd33)</fullName>
            </value>
            <value>
                <fullName>If yes How long ago(dd34)</fullName>
            </value>
            <value>
                <fullName>Forensic Status</fullName>
            </value>
            <value>
                <fullName>Smoking status</fullName>
            </value>
            <value>
                <fullName>Referral Type</fullName>
            </value>
            <value>
                <fullName>Referring Provider</fullName>
            </value>
            <value>
                <fullName>Referring NPI</fullName>
            </value>
            <value>
                <fullName>No Admit Reason</fullName>
            </value>
            <value>
                <fullName>SDoH Current Rating</fullName>
            </value>
            <value>
                <fullName>IRP involvement</fullName>
            </value>
            <value>
                <fullName>Marital Status</fullName>
            </value>
            <value>
                <fullName>Employment Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>