force-app/main/default/objects/Credible_Lookup__c/fields/Credible_Lookup_Items__c.field-meta.xml
<CustomField>
    <fullName>Credible_Lookup_Items__c</fullName>
    <label>Credible Lookup Items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>