force-app/main/default/objects/Credible_Lookup__c/fields/Credible_Table__c.field-meta.xml
<CustomField>
    <fullName>Credible_Table__c</fullName>
    <label>Credible Table</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>