force-app/main/default/objects/Credible_Lookup__c/fields/Credible_Value__c.field-meta.xml
<CustomField>
    <fullName>Credible_Value__c</fullName>
    <label>Credible Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>