force-app/main/default/objects/Credible_Lookup__c/fields/Salesforce_Value__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Value__c</fullName>
    <label>Salesforce Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>